force-app/main/default/objects/CTRAdditionalInfo__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Info</relationshipLabel>
        <relationshipName>Additional_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>CTRMasterData__c</referenceTo>
        <relationshipLabel>Additional Info</relationshipLabel>
        <relationshipName>Additional_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <referenceTo>CTRMasterData__c</referenceTo>
        <relationshipLabel>Additional Info (Customer Group)</relationshipLabel>
        <relationshipName>Additional_Info1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Type</label>
        <referenceTo>CTRMasterData__c</referenceTo>
        <relationshipLabel>Additional Info (Customer Type)</relationshipLabel>
        <relationshipName>Additional_Info2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Industry</label>
        <referenceTo>CTRMasterData__c</referenceTo>
        <relationshipLabel>Additional Info (Industries)</relationshipLabel>
        <relationshipName>Additional_Info3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insdustry__c</fullName>
        <label>Insdustry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN001 - Adhesive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inter Group</label>
        <referenceTo>CTRMasterData__c</referenceTo>
        <relationshipLabel>Additional Info (Inter Group)</relationshipLabel>
        <relationshipName>Additional_Info4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <label>Sold-To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wait SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Industry</label>
        <referenceTo>CTRMasterData__c</referenceTo>
        <relationshipLabel>Additional Info (Sub Industry)</relationshipLabel>
        <relationshipName>Additional_Info5</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Additional Info No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>